--- a/.classpath
+++ b/.classpath
@@ -35,5 +35,14 @@
 			<attribute name="maven.scope" value="compile"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Admin/.m2/repository/io/rest-assured/json-path/5.5.0/json-path-5.5.0.jar" sourcepath="C:/Users/Admin/.m2/repository/io/rest-assured/json-path/5.5.0/json-path-5.5.0-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="io.rest-assured"/>
+			<attribute name="maven.artifactId" value="json-path"/>
+			<attribute name="maven.version" value="5.5.0"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
